MDEV-16682 Assertion `(buff[7] & 7) == HEAD_PAGE' failed

Missed one file in last push...